# Excel-Automation

./: .gitignore  README.md  pipeline.py  pipeline_exe.bat  pyproject.toml  requirements.txt  sales_february.csv  sales_january.csv  ventas_marzo_clean_anomalias.xlsx  watcher.py
inbox/: ventas_marzo.xlsx
modules/: analyzer.py  anomaly_detector.py  cleaner.py  column_mapper.py  config.py  core.py  domain_detector.py  formatter.py  history.py  insights.py  loader.py  notifier.py  reporting.py  validator.py
output/sales_february/: sales_february_clean_20260526_2145.xlsx  sales_february_clean_20260526_2145_insights.txt  sales_february_clean_20260526_2239.xlsx  sales_february_clean_20260526_2239_insights.txt
output/sales_january/: sales_january_clean_20260526_1703.xlsx  sales_january_clean_20260526_1703_insights.txt
outputs/: excel.py  sql.py
workflows/: generic.yaml  marketing.yaml  sales.yaml
