[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excel_automation"
version = "0.1.0"
description = "Excel Automation Project"
requires-python = ">=3.12"
dependencies = [
    # If you got dependencies add them up below
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["modules", "workflows"]
exclude = ["inbox", "output", "outputs", "__pycache__"]